feat: entity schema 수정 및 기본 service 로직 작성